--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Entities\EntityComponent.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\IEntityComponent.cs" />
+    <Compile Include="Entities\IRenderable.cs" />
     <Compile Include="Events\BaseEvent.cs" />
     <Compile Include="Events\IEvent.cs" />
     <Compile Include="Events\IEventListener.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\State.cs" />
     <Compile Include="State\StateManager.cs" />
+    <Compile Include="System\Renderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
