--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -59,6 +59,8 @@
     <Compile Include="State\State.cs" />
     <Compile Include="State\StateManager.cs" />
     <Compile Include="Systems\Renderer.cs" />
+    <Compile Include="Tile.cs" />
+    <Compile Include="TileMap.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
