--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="2DWorld.cs" />
     <Compile Include="Commands\CommandQueue.cs" />
     <Compile Include="Entities\AnimationComponent.cs" />
     <Compile Include="Entities\EntityComponent.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Events\EventManager.cs" />
     <Compile Include="Input\InputManager.cs" />
     <Compile Include="Examples\PlayerEntity.cs" />
+    <Compile Include="IWorld.cs" />
     <Compile Include="Math\Calc2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\State.cs" />
