--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\State.cs" />
     <Compile Include="State\StateManager.cs" />
-    <Compile Include="Systems\Collision.cs" />
+    <Compile Include="Systems\CollisionSystem.cs" />
     <Compile Include="Systems\Renderer.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TileMap.cs" />
