--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Map\Layer.cs" />
+    <Compile Include="Map\MapRepository.cs" />
     <Compile Include="TwoDWorld.cs" />
     <Compile Include="Commands\CommandQueue.cs" />
     <Compile Include="Entities\AnimationComponent.cs" />
@@ -68,6 +69,9 @@
     <Compile Include="Systems\Renderer.cs" />
     <Compile Include="Map\Tile.cs" />
     <Compile Include="Map\TileMap.cs" />
+    <Compile Include="Utils\Compression.cs" />
+    <Compile Include="Resources\IResourceManager.cs" />
+    <Compile Include="Resources\ResourceManager.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
