Refactoring preparation for camera

--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera\Camera2D.cs" />
+    <Compile Include="Camera\SimpleCamera2D.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ICommandFactory.cs" />
