--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -44,13 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Background\BackgroundFactory.cs" />
+    <Compile Include="Background\BackgroundLayer.cs" />
+    <Compile Include="Background\BackgroundLayers.cs" />
+    <Compile Include="Background\BackgroundTile.cs" />
+    <Compile Include="Background\IBackgroundTile.cs" />
+    <Compile Include="Background\ParallaxBackgroundTile.cs" />
     <Compile Include="Camera\Camera2D.cs" />
     <Compile Include="Camera\SimpleCamera2D.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ICommandFactory.cs" />
+    <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Entities\IEntityFactory.cs" />
     <Compile Include="Entities\IRenderableText.cs" />
     <Compile Include="Events\GameEvent.cs" />
+    <Compile Include="Level\Level.cs" />
+    <Compile Include="Level\LevelManager.cs" />
     <Compile Include="Map\IMapRepository.cs" />
     <Compile Include="Map\Layer.cs" />
     <Compile Include="Map\MapRepository.cs" />
