--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -57,7 +57,11 @@
     <Compile Include="Commands\ICommandFactory.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\IEntityFactory.cs" />
+    <Compile Include="Entities\IPickup.cs" />
+    <Compile Include="Entities\IPickupFactory.cs" />
+    <Compile Include="Entities\IProjectile.cs" />
     <Compile Include="Entities\IRenderableText.cs" />
+    <Compile Include="Entities\IWeapon.cs" />
     <Compile Include="Events\GameEvent.cs" />
     <Compile Include="Level\Level.cs" />
     <Compile Include="Level\LevelManager.cs" />
