--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ICommandFactory.cs" />
+    <Compile Include="Commands\SimpleCommandFactory.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\IEntityFactory.cs" />
     <Compile Include="Entities\IPickup.cs" />
@@ -63,11 +64,13 @@
     <Compile Include="Entities\IRenderableText.cs" />
     <Compile Include="Entities\IWeapon.cs" />
     <Compile Include="Events\GameEvent.cs" />
+    <Compile Include="HGengine.cs" />
     <Compile Include="Level\Level.cs" />
     <Compile Include="Level\LevelManager.cs" />
     <Compile Include="Map\IMapRepository.cs" />
     <Compile Include="Map\Layer.cs" />
     <Compile Include="Map\MapRepository.cs" />
+    <Compile Include="State\BaseMenuState.cs" />
     <Compile Include="TwoDWorld.cs" />
     <Compile Include="Commands\CommandQueue.cs" />
     <Compile Include="Entities\EntityComponent.cs" />
@@ -93,6 +96,7 @@
     <Compile Include="Systems\Renderer.cs" />
     <Compile Include="Map\Tile.cs" />
     <Compile Include="Map\TileMap.cs" />
+    <Compile Include="UI\MenuOption.cs" />
     <Compile Include="Utils\Compression.cs" />
     <Compile Include="Resources\IResourceManager.cs" />
     <Compile Include="Resources\ResourceManager.cs" />
