--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ICommandFactory.cs" />
     <Compile Include="Commands\SimpleCommandFactory.cs" />
+    <Compile Include="EntityComponentSystem\Component.cs" />
+    <Compile Include="EntityComponentSystem\Entity.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\IEntityFactory.cs" />
     <Compile Include="Entities\IPickup.cs" />
@@ -75,7 +77,7 @@
     <Compile Include="TwoDWorld.cs" />
     <Compile Include="Commands\CommandQueue.cs" />
     <Compile Include="Entities\EntityComponent.cs" />
-    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\AbstractEntity.cs" />
     <Compile Include="Entities\ICollidable.cs" />
     <Compile Include="Entities\IEntityComponent.cs" />
     <Compile Include="Entities\InputComponent.cs" />
