Entity component system update

--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Map\Layer.cs" />
     <Compile Include="Map\MapRepository.cs" />
     <Compile Include="State\BaseMenuState.cs" />
+    <Compile Include="Systems\ArcadeCollisionSystem.cs" />
+    <Compile Include="Systems\ICollisionSystem.cs" />
     <Compile Include="TwoDWorld.cs" />
     <Compile Include="Commands\CommandQueue.cs" />
     <Compile Include="Entities\EntityComponent.cs" />
@@ -87,7 +89,7 @@
     <Compile Include="Entities\IEntityComponent.cs" />
     <Compile Include="Entities\InputComponent.cs" />
     <Compile Include="Entities\IRenderable.cs" />
-    <Compile Include="Entities\MovementComponent.cs" />
+    <Compile Include="Entities\MovementComponentOLD.cs" />
     <Compile Include="Entities\VisualComponent.cs" />
     <Compile Include="Events\BaseEvent.cs" />
     <Compile Include="Events\IEvent.cs" />
