--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Entities\AbstractEntity.cs" />
     <Compile Include="Entities\ICollidable.cs" />
     <Compile Include="Entities\IEntityComponent.cs" />
-    <Compile Include="Entities\InputComponent.cs" />
+    <Compile Include="Entities\InputComponentOLD.cs" />
     <Compile Include="Entities\IRenderable.cs" />
     <Compile Include="Entities\MovementComponentOLD.cs" />
     <Compile Include="Entities\VisualComponent.cs" />
