--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation\Animation.cs" />
+    <Compile Include="Animation\AnimationFrame.cs" />
     <Compile Include="Background\BackgroundFactory.cs" />
     <Compile Include="Background\BackgroundLayer.cs" />
     <Compile Include="Background\BackgroundLayers.cs" />
