--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Map\IMapRepository.cs" />
     <Compile Include="Map\Layer.cs" />
     <Compile Include="Map\MapRepository.cs" />
+    <Compile Include="Map\TileAction.cs" />
     <Compile Include="MathUtils\RectangleExtensions.cs" />
     <Compile Include="State\BaseMenuState.cs" />
     <Compile Include="Systems\ArcadeCollisionSystem.cs" />
