--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -61,14 +61,15 @@
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ICommandFactory.cs" />
     <Compile Include="Commands\SimpleCommandFactory.cs" />
-    <Compile Include="Components\InputComponent.cs" />
-    <Compile Include="Entities\ICollisionHandler.cs" />
+    <Compile Include="Animation\AnimationComponent.cs" />
+    <Compile Include="Input\InputComponent.cs" />
+    <Compile Include="CollisionDetection\ICollisionHandler.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\IEntityFactory.cs" />
     <Compile Include="Entities\IPickup.cs" />
     <Compile Include="Entities\IPickupFactory.cs" />
     <Compile Include="Entities\IProjectile.cs" />
-    <Compile Include="Entities\IRenderableText.cs" />
+    <Compile Include="Rendering\IRenderableText.cs" />
     <Compile Include="Entities\IWeapon.cs" />
     <Compile Include="EntityComponentSystem\Entity.cs" />
     <Compile Include="EntityComponentSystem\EntityComponentSystem.cs" />
@@ -87,21 +88,16 @@
     <Compile Include="Map\TileAction.cs" />
     <Compile Include="Map\TileWithMapTransition.cs" />
     <Compile Include="MathUtils\RectangleExtensions.cs" />
+    <Compile Include="Rendering\RenderComponent.cs" />
     <Compile Include="State\BaseMenuState.cs" />
     <Compile Include="State\FadeState.cs" />
     <Compile Include="State\Transition.cs" />
-    <Compile Include="Systems\ArcadeCollisionSystem.cs" />
-    <Compile Include="Systems\ICollisionSystem.cs" />
+    <Compile Include="CollisionDetection\ArcadeCollisionSystem.cs" />
+    <Compile Include="CollisionDetection\ICollisionSystem.cs" />
     <Compile Include="TwoDWorld.cs" />
     <Compile Include="Commands\CommandQueue.cs" />
-    <Compile Include="Entities\EntityComponent.cs" />
-    <Compile Include="Entities\AbstractEntity.cs" />
-    <Compile Include="Entities\ICollidable.cs" />
-    <Compile Include="Entities\IEntityComponent.cs" />
-    <Compile Include="Entities\InputComponentOLD.cs" />
-    <Compile Include="Entities\IRenderable.cs" />
-    <Compile Include="Entities\MovementComponentOLD.cs" />
-    <Compile Include="Entities\VisualComponent.cs" />
+    <Compile Include="CollisionDetection\ICollidable.cs" />
+    <Compile Include="Rendering\IRenderable.cs" />
     <Compile Include="Events\BaseEvent.cs" />
     <Compile Include="Events\IEvent.cs" />
     <Compile Include="Events\IEventListener.cs" />
@@ -112,8 +108,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\State.cs" />
     <Compile Include="State\StateManager.cs" />
-    <Compile Include="Systems\CollisionSystem.cs" />
-    <Compile Include="Systems\Renderer.cs" />
+    <Compile Include="CollisionDetection\CollisionSystem.cs" />
+    <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="Map\Tile.cs" />
     <Compile Include="Map\TileMap.cs" />
     <Compile Include="UI\MenuOption.cs" />
@@ -127,6 +123,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
