--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -98,7 +98,7 @@
     <Compile Include="MathUtils\RectangleExtensions.cs" />
     <Compile Include="Rendering\RenderComponent.cs" />
     <Compile Include="State\BaseMenuState.cs" />
-    <Compile Include="State\FadeState.cs" />
+    <Compile Include="State\FadeTransition.cs" />
     <Compile Include="State\GameStateManager.cs" />
     <Compile Include="State\SceneState.cs" />
     <Compile Include="State\Transition.cs" />
