--- a/Gengine.csproj
+++ b/Gengine.csproj
@@ -66,7 +66,7 @@
     <Compile Include="DungeonGenerators\Door.cs" />
     <Compile Include="DungeonGenerators\DoorBuilder.cs" />
     <Compile Include="DungeonGenerators\IDungeonGenerator.cs" />
-    <Compile Include="DungeonGenerators\Map.cs" />
+    <Compile Include="DungeonGenerators\DungeonMap.cs" />
     <Compile Include="DungeonGenerators\MapExtensions.cs" />
     <Compile Include="DungeonGenerators\PathGenerator.cs" />
     <Compile Include="DungeonGenerators\Room.cs" />
